Use jquery and datatables

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>task-spooler</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
-  </head>
-  <body>
-    <h1>GUI for task-spooler</h1>
-    <table>
-      <thead id="table-head">
-      </thead>
-      <tbody id="table-body"></tbody>
-    </table>
-    <script src="{{url_for('static', filename='index.js')}}"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>task-spooler</title>
+  <link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+</head>
+
+<body>
+  <h1>GUI for task-spooler</h1>
+  <table id="mainTable"></table>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script src="{{url_for('static', filename='index.js')}}"></script>
+</body>
+
 </html>
