--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <h1>GUI for task-spooler</h1>
+  <div><label for="socketName">Socket:</label><input type="text" id="socketName" name="socketName" value="devign"></div>
   <table id="mainTable"></table>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
