--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,18 @@
 <body>
   <h1>GUI for task-spooler</h1>
   <div><label for="socketName">Socket:</label><input type="text" id="socketName" name="socketName" value="devign"></div>
-  <table id="mainTable"></table>
+  <table id="mainTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>State</th>
+        <th>Output</th>
+        <th>E-Level</th>
+        <th>Times(r/u/s)</th>
+        <th>Command [run=0/1]</th>
+      </tr>
+    </thead>
+  </table>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
   <script src="{{url_for('static', filename='index.js')}}"></script>
