Split time up into fields

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,14 @@
   <table id="mainTable">
     <thead>
       <tr>
-        <th>ID</th>
+        <th></th>
         <th>State</th>
         <th>Output</th>
         <th>E-Level</th>
-        <th>Times(r/u/s)</th>
         <th>Command [run=0/1]</th>
+        <th>Time (real)</th>
+        <th>Time (user)</th>
+        <th>Time (system)</th>
       </tr>
     </thead>
   </table>
