--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,10 @@
 
 <body>
   <h1>GUI for task-spooler</h1>
-  <div><label for="socketName">Socket:</label><input type="text" id="socketName" name="socketName" value=""></div>
-  <input id="refreshButton" type="button" value="Refresh">
+  <div>
+    <label for="socketName">Socket:</label>
+    <select id="socketName" name="socketName"></select>
+  </div>
   <table id="mainTable"></table>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
