--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,24 @@
-table, th, td {
+table,
+th,
+td {
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+.header img,
+.header h1 {
+    display: inline;
+    vertical-align: middle;
+}
+
+.header img {
+    margin: 15px;
+}
+
+footer {
+    font-size: 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin: 20px;
 }
