--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,46 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <title>task-spooler</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
 </head>
 
 <body>
-  <div class="header">
-    <img class="icon" src="{{ url_for('static', filename='noun-spool-447490.png') }}" alt="Spool icon" width="50px">
-    <h1>GUI for task-spooler</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img class="icon" src="{{ url_for('static', filename='noun-spool-447490.png') }}"
+          class="d-inline-block align-top" alt="Spool icon" width="40">
+        GUI for task-spooler
+      </a>
+    </div>
+  </nav>
+
+  <div class="container-fluid">
+    <label class="d-flex justify-content-end align-items-center">
+      <span>Socket:</span>
+      <div class="col-md-3" style="margin: .5em 0 .5em .5em;">
+        <select id="socketName" name="socketName" class="form-select" aria-label="Select a socket"></select>
+      </div>
+    </label>
+
+    <table id="mainTable" class="table table-striped"></table>
   </div>
-  <div>
-    <label for="socketName">Socket:</label>
-    <select id="socketName" name="socketName"></select>
-  </div>
-  <table id="mainTable"></table>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-  <script src="{{url_for('static', filename='index.js')}}"></script>
+
+  <footer class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light">
+    <div class="container-fluid">
+      <p>task-spooler v0</p>
+      <p>Created by <a href="http://benjijang.com">Ben Steenhoek</a>. Contribute on <a
+          href="https://github.com/bstee615/task-spooler-gui">Github</a>!</p>
+      <p>Icon: Spool by Eliricon from NounProject.com</p>
+    </div>
+  </footer>
 </body>
 
-<footer>
-  <small>
-    <p>task-spooler v0</p>
-    <p>Created by <a href="http://benjijang.com">Ben Steenhoek</a>. Contribute on <a href="https://github.com/bstee615/task-spooler-gui">Github</a>!</p>
-    <p>Icon: Spool by Eliricon from NounProject.com</p>
-  </small>
-</footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="{{url_for('static', filename='index.js')}}"></script>
 
 </html>
