--- a/templates/index.html
+++ b/templates/index.html
@@ -37,10 +37,14 @@
 
   <footer class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light">
     <div class="container-fluid">
-      <p>task-spooler v0</p>
-      <p>Created by <a href="http://benjijang.com">Ben Steenhoek</a>. Contribute on <a
-          href="https://github.com/bstee615/task-spooler-gui">Github</a>!</p>
-      <p>Icon: Spool by Eliricon from NounProject.com</p>
+      <div class="mx-auto">
+        <p class="text-center">
+          task-spooler v0 |
+          Created by <a href="http://benjijang.com">Ben Steenhoek</a> |
+          Contribute on <a href="https://github.com/bstee615/task-spooler-gui">Github</a> |
+          Icon: Spool by Eliricon from NounProject.com
+        </p>
+      </div>
     </div>
   </footer>
 </body>
