--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-sm align-middle">Last refresh: <span id="lastRefresh"></span></div>
+      <div class="col-sm align-middle">Last update: <span id="lastUpdate"></span></div>
       <label class="col-sm d-flex justify-content-end align-items-center">
         <div>Socket:</div>
         <div class="col-md-3" style="margin: .5em 0 .5em .5em;">
