Add dummy output window

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,17 +26,34 @@
 
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-sm align-middle">Last update: <span id="lastUpdate"></span></div>
+      <div class="col-sm">
+        Last update:
+        <span id="lastUpdate"></span>
+      </div>
+
+      <label class="col-sm form-check-label" for="showOutputCheck">
+        Show output
+        <input class="form-check-input" type="checkbox" value="" id="showOutputCheck">
+      </label>
+
       <label class="col-sm d-flex justify-content-end align-items-center">
         <div>Socket:</div>
         <div class="col-md-3" style="margin: .5em 0 .5em .5em;">
-          <select id="socketName" name="socketName" class="form-select" aria-label="Select a socket"></select>
+          <select id="socketName" class="form-select" aria-label="Select a socket"></select>
         </div>
       </label>
     </div>
 
     <div class="row">
       <table id="mainTable" class="table table-striped"></table>
+    </div>
+
+    <div class="row overflow-auto" id="outputDisplayContainer">
+      <div class="container">
+        <div class="row bg-light border-dark rounded m-1">
+          <pre id="outputDisplay"><code>FOO</code></pre>
+        </div>
+      </div>
     </div>
   </div>
 
