--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
+  <div class="container-fluid" style="margin-bottom: 65px">
     <div class="row align-items-center">
       <div class="col-sm">
         Last update:
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <footer class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light">
+  <footer class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light" style="height: 55px">
     <div class="container-fluid">
       <div class="mx-auto">
         <p class="text-center">
