--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,6 @@
         <span id="lastUpdate"></span>
       </div>
 
-      <label class="col-sm form-check-label" for="showOutputCheck">
-        Show output
-        <input class="form-check-input" type="checkbox" value="" id="showOutputCheck">
-      </label>
-
       <label class="col-sm d-flex justify-content-end align-items-center">
         <div>Socket:</div>
         <div class="col-md-3" style="margin: .5em 0 .5em .5em;">
@@ -48,10 +43,28 @@
       <table id="mainTable" class="table table-striped"></table>
     </div>
 
-    <div class="row overflow-auto" id="outputDisplayContainer">
+    <div class="row">
       <div class="container">
-        <div class="row bg-light border-dark rounded m-1">
-          <pre id="outputDisplay"><code>FOO</code></pre>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="showOutputCheck">
+          <label class="form-check-label" for="showOutputCheck">
+            Show output
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="container">
+        <div class="row m-1">
+          <div id="outputDisplay">
+            <div class="row">
+              File: <span id="outputDisplayFilename"></span>
+            </div>
+            <div class="row bg-light border-dark rounded">
+              <pre><code id="outputDisplayText"></code></pre>
+            </div>
+          </div>
         </div>
       </div>
     </div>
