Show output by default

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="container">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="showOutputCheck">
+          <input class="form-check-input" type="checkbox" id="showOutputCheck" checked>
           <label class="form-check-label" for="showOutputCheck">
             Show output
           </label>
