--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,9 @@
         <div class="row m-1">
           <div id="outputDisplay">
             <div class="row">
-              File: <span id="outputDisplayFilename"></span>
+              <div class="col">
+                File: <span id="outputDisplayFilename"></span>
+              </div>
             </div>
             <div class="row bg-light border-dark rounded">
               <pre><code id="outputDisplayText"></code></pre>
