Add number of lines display

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,11 @@
                 File: <span id="outputDisplayFilename"></span>
               </div>
             </div>
+            <div class="row">
+              <div class="col">
+                <span id="outputDisplayNumLines"></span> lines
+              </div>
+            </div>
             <div class="row bg-light border-dark rounded">
               <pre><code id="outputDisplayText"></code></pre>
             </div>
