Add tail output

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,12 @@
             Show output
           </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="tailCheck" checked>
+          <label class="form-check-label" for="tailCheck">
+            Show tail only (last 20 lines)
+          </label>
+        </div>
       </div>
     </div>
 
@@ -65,7 +71,7 @@
             </div>
             <div class="row">
               <div class="col">
-                <span id="outputDisplayNumLines"></span> lines
+                <span id="outputDisplayNumLines"></span>
               </div>
             </div>
             <div class="row bg-light border-dark rounded">
