Add option to auto update tail file

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,12 @@
             Show tail only (last 10 lines)
           </label>
         </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="updateOutputCheck" checked>
+          <label class="form-check-label" for="updateOutputCheck">
+            Auto-update
+          </label>
+        </div>
       </div>
     </div>
 
