Update version number

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
     <div class="container-fluid">
       <div class="mx-auto">
         <p class="text-center">
-          task-spooler v0 |
+          task-spooler GUI v0 |
           Created by <a href="http://benjijang.com">Ben Steenhoek</a> |
           Contribute on <a href="https://github.com/bstee615/task-spooler-gui">Github</a> |
           Icon: Spool by Eliricon from NounProject.com
