--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,12 @@
             <option value="60">60 sec</option>
           </select>
         </div>
+        <div class="col-md-3 form-check">
+          <input class="form-check-input" type="checkbox" id="updateTableCheck" checked>
+          <label class="form-check-label" for="updateTableCheck">
+            Auto-update table
+          </label>
+        </div>
       </label>
 
       <div class="col-sm">
@@ -71,7 +77,7 @@
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="updateOutputCheck" checked>
           <label class="form-check-label" for="updateOutputCheck">
-            Auto-update
+            Auto-update output
           </label>
         </div>
       </div>
