Move last update to hideable section

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,10 +80,6 @@
             Auto-update output
           </label>
         </div>
-        <div class="col-sm">
-          Last update:
-          <span id="lastUpdateOutput"></span>
-        </div>
       </div>
     </div>
 
@@ -91,6 +87,12 @@
       <div class="container">
         <div class="row m-1">
           <div id="outputDisplay">
+            <div class="row">
+              <div class="col">
+                Last update:
+                <span id="lastUpdateOutput"></span>
+              </div>
+            </div>
             <div class="row">
               <div class="col">
                 File: <span id="outputDisplayFilename"></span>
