Clarify no tail on download

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="tailCheck" checked>
           <label class="form-check-label" for="tailCheck">
-            Show tail only (last 10 lines)
+            Show tail only (last 10 lines, no effect on download)
           </label>
         </div>
         <div class="form-check">
