Add star shield to footer

--- a/src/task_spooler_gui/templates/index.html
+++ b/src/task_spooler_gui/templates/index.html
@@ -177,9 +177,9 @@
       <div class="container-fluid">
         <div class="mx-auto">
           <p class="text-center">
-            task-spooler GUI v0 | Created by
-            <a href="http://benjijang.com">Ben Steenhoek</a> | Contribute on
-            <a href="https://github.com/bstee615/task-spooler-gui">Github</a> |
+            task-spooler GUI v0.1.0 | Created by
+            <a href="http://benjijang.com">Ben Steenhoek</a> |
+            <a href="https://github.com/bstee615/task-spooler-gui">Contribute on Github</a> <a href="https://github.com/bstee615/task-spooler-gui" style="text-decoration: none;"><img src="https://img.shields.io/github/stars/bstee615/task-spooler-gui" alt="Edit on GitHub"></a> |
             Icon: Spool by Eliricon from NounProject.com
           </p>
         </div>
