Auto refresh by default

--- a/src/task_spooler_gui/templates/index.html
+++ b/src/task_spooler_gui/templates/index.html
@@ -69,6 +69,7 @@
               class="form-check-input"
               type="checkbox"
               id="updateTableCheck"
+              checked
             />
             <label class="form-check-label" for="updateTableCheck">
               Auto-update table
@@ -90,7 +91,7 @@
 
         <label class="col-sm d-flex justify-content-end align-items-center">
           <div>Socket:</div>
-          <div class="col-md-3" style="margin: 0.5em 0 0.5em 0.5em">
+          <div class="col-md-4" style="margin: 0.5em 0 0.5em 0.5em">
             <select
               id="socketName"
               class="form-select"
@@ -133,6 +134,7 @@
               class="form-check-input"
               type="checkbox"
               id="updateOutputCheck"
+              checked
             />
             <label class="form-check-label" for="updateOutputCheck">
               Auto-update output
